--- a/application.conf
+++ b/application.conf
@@ -8,9 +8,9 @@ deepdive {
     dbname   : ${DBNAME}
     host     : ${PGHOST}
     port     : ${PGPORT}
-	gphost   : ${GPHOST}
-	gpport   : ${GPPORT}
-	gppath   : ${GPPATH}
+    gphost   : ${GPHOST}
+    gpport   : ${GPPORT}
+    gppath   : ${GPPATH}
 	# start gpfdist server on the machine running the application with
 	# `rungpcommand 'gpfdist -d /lfs/raiders4/0/rionda/greenplum_gpfdist -p 8888'`
   }
@@ -19,13 +19,50 @@ deepdive {
   inference.parallel_grounding: true
 
   # holdout fraction for calibration
-  calibration.holdout_fraction: 0.1
+  # calibration.holdout_fraction: 0.1
+  calibration: {
+  	holdout_query: """
+  		INSERT INTO dd_graph_variables_holdout(variable_id) SELECT g.id FROM gene_hpoterm_relations g, random_doc_id r WHERE g.doc_id = r.doc_id;
+  		INSERT INTO dd_graph_variables_holdout(variable_id) SELECT g.id FROM gene_mentions g, random_doc_id r WHERE g.doc_id = r.doc_id;
+  		INSERT INTO dd_graph_variables_holdout(variable_id) SELECT g.id FROM hpoterm_mentions g, random_doc_id r WHERE g.doc_id = r.doc_id;
+  	"""
+	}
 
   # Execute one extractor at a time (but we use parallelism for extractors)
   extraction.parallelism: 1
 
   # Extractors
   extraction.extractors {
+
+  new_sentence: {
+		style: sql_extractor
+		sql: """
+			DROP TABLE IF EXISTS sentences_input CASCADE;
+			CREATE TABLE sentences_input
+			AS select 
+     -- document id
+     doc_id,
+     -- sentence id
+     sent_id,
+     -- word indexes
+     array_to_string(wordidxs, '|^|') AS wordidxs,
+     -- words text[],
+     array_to_string(words, '|^|') AS words,
+     -- parts of speech
+     array_to_string(poses, '|^|') AS poses,
+     -- named entity recognition tags
+     array_to_string(ners, '|^|') AS ners,
+     -- lemmified version of words
+     array_to_string(lemmas, '|^|') AS lemmas,
+     -- dependency path labels
+     array_to_string(dep_paths, '|^|') AS dep_paths,
+     -- dependency path parents
+     array_to_string(dep_parents, '|^|') AS dep_parents,
+     -- bounding boxes
+     array_to_string(bounding_boxes, '|^|') AS bounding_boxes
+     FROM sentences;
+		"""
+    }
 
 ### ACRONYMS ###
 
@@ -51,6 +88,8 @@ deepdive {
 		output_relation: acronyms
 		udf: ${APP_HOME}/code/find_acronyms.py
 		parallelism: ${PARALLELISM}
+		dependencies: [new_sentence]
+
 	}
 
 ### GENES ###
@@ -63,6 +102,7 @@ deepdive {
 		output_relation: gene_mentions
 		udf: ${APP_HOME}/code/extract_gene_mentions.py
 		parallelism: ${PARALLELISM}
+		dependencies: [new_sentence]
 	}
 
 	# Supervise the gene mention candidates using the acronyms
@@ -153,6 +193,7 @@ deepdive {
 		output_relation: hpoterm_mentions
 		udf: ${APP_HOME}/code/extract_hpoterm_mentions.py
 		parallelism: ${PARALLELISM}
+		dependencies: [new_sentence]
 	}
 
 	# For each supervised hpoterm mention candidate, add an unsupervised copy
@@ -234,13 +275,14 @@ deepdive {
 							g, h, sentences_input
 					WHERE
 							sentences_input.doc_id = h.doc_id
-					AND		sentences_input.sent_id = h.sent_id
-					AND		g.doc_id = sentences_input.doc_id
-					AND		g.sent_id = sentences_input.sent_id
+					AND   sentences_input.sent_id = h.sent_id
+					AND   g.doc_id = sentences_input.doc_id
+					AND   g.sent_id = sentences_input.sent_id
 					GROUP BY sentences_input.doc_id, sentences_input.sent_id
 				"""
 		output_relation: gene_hpoterm_relations
-		udf: ${APP_HOME}/code/gene_hpoterm_relations.py
+		udf: ${APP_HOME}/code/gene_hpoterm_relations_fewfeatures.py
+		# udf: util/extractor_input_writer.py ${APP_HOME}/relation_input.tsv
 		dependencies: [gene_supervision_acronyms, extract_hpoterm_mentions]
 		parallelism: ${PARALLELISM}
 	}
@@ -271,6 +313,46 @@ deepdive {
 					is_correct IS NOT NULL
 				"""
 		dependencies: [gene_hpoterm_relations]
+	}
+
+	# Use labeled data to supervise gp relation candidates
+	label_gp_relations: {
+		style: sql_extractor
+		sql: """INSERT INTO gene_hpoterm_relations
+				SELECT
+					g.id,
+					g.doc_id,
+					g.sent_id_1,
+					g.sent_id_2,
+					g.relation_id || '_SUP',
+					g.type,
+					g.mention_id_1,
+					g.mention_id_2,
+					g.wordidxs_1,
+					g.wordidxs_2,
+					g.words_1,
+					g.words_2,
+					l.is_correct,
+					g.features
+				FROM
+					gene_hpoterm_relations g,
+					labeled_gp l
+			where
+				l.doc_id = g.doc_id
+				and
+				l.relation_id = g.relation_id
+			"""
+		#sql: """UPDATE  gene_hpoterm_relations
+		#	SET 
+		#		is_correct = labeled_gp.is_correct
+		#	FROM
+		#		labeled_gp
+		#	where
+		#		labeled_gp.doc_id = gene_hpoterm_relations.doc_id
+		#		and
+		#		labeled_gp.relation_id = gene_hpoterm_relations.relation_id
+		#	"""
+		dependencies: [ gene_hpoterm_relations, add_unsuper_dup_genehpoterms]
 	}
 
 	# We need to make sure that each unsupervised g/h relation candidate has as
@@ -328,13 +410,22 @@ deepdive {
 ### PIPELINES ###
 
   # Pipeline: select which extractors / factors to run
-  pipeline.run: debug
+  # pipeline.relearn_from: "/lfs/raiders4/0/senwu/deepdive/out/2015-01-11T104227/"
+  pipeline.run: gg
   pipeline.pipelines {
-	# Run only some extractors / factors
+  gg : [ classify_gene_mentions, classify_hpoterm_mentions, classify_gene_hpoterm_relations_features, gp_joint_1, gp_joint_2, abbre_gene_1, abbre_gene_2, abbre_hpoterm_1, abbre_hpoterm_2 ]
+  dd : [ classify_gene_mentions, classify_hpoterm_mentions, classify_gene_hpoterm_relations_features ]
+	matteo: [ gene_hpoterm_relations, classify_gene_mentions, classify_hpoterm_mentions, classify_gene_hpoterm_relations_features, gp_joint_1, gp_joint_2 ]
+	matteo2: [ find_acronyms, gene_supervision_acronyms, add_unsuper_dup_genes, add_geneRifs_mentions, add_unsuper_dup_hpoterms, gene_hpoterm_relations, label_gp_relations, add_unsuper_dup_genehpoterms, classify_gene_mentions, classify_hpoterm_mentions, classify_gene_hpoterm_relations_features, gp_joint_1, gp_joint_2 ]
+	matteo1: [ find_acronyms, extract_gene_mentions, gene_supervision_acronyms, add_unsuper_dup_genes, extract_geneRifs_mentions, add_geneRifs_mentions, extract_hpoterm_mentions, add_unsuper_dup_hpoterms, gene_hpoterm_relations, label_gp_relations, add_unsuper_dup_genehpoterms, classify_gene_mentions, classify_hpoterm_mentions, classify_gene_hpoterm_relations_features, gp_joint_1, gp_joint_2 ]
+    # Run only some extractors / factors
 	#debug: [add_unsuper_dup_genes,add_unsuper_dup_hpoterms,classify_gene_mentions,classify_hpoterm_mentions,classify_gene_hpoterm_relations_features,gp_joint_factor]
 	#debug: [classify_gene_mentions,classify_hpoterm_mentions,classify_gene_hpoterm_relations_features,gp_joint_factor]
-	debug: [find_acronyms, extract_gene_mentions, gene_supervision_acronyms, add_unsuper_dup_genes, extract_geneRifs_mentions, add_geneRifs_mentions, classify_gene_mentions, extract_hpoterm_mentions, add_unsuper_dup_hpoterms, classify_hpoterm_mentions, gene_hpoterm_relations, add_unsuper_dup_genehpoterms, classify_gene_hpoterm_relations_features]
-
+	#debug: [find_acronyms, extract_gene_mentions, gene_supervision_acronyms, add_unsuper_dup_genes, extract_geneRifs_mentions, add_geneRifs_mentions, classify_gene_mentions, extract_hpoterm_mentions, add_unsuper_dup_hpoterms, classify_hpoterm_mentions, gene_hpoterm_relations, add_unsuper_dup_genehpoterms, classify_gene_hpoterm_relations_features]
+	#debug: [ label_gp_relations, classify_gene_mentions, classify_hpoterm_mentions, classify_gene_hpoterm_relations_features]
+	#debug: [ label_gp_relations]
+	debug: [ gene_hpoterm_relations, label_gp_relations, add_unsuper_dup_genehpoterms, classify_gene_mentions, classify_hpoterm_mentions, classify_gene_hpoterm_relations_features, gp_joint_1, gp_joint_2 ]
+	#debug: [ classify_gene_mentions, classify_hpoterm_mentions, classify_gene_hpoterm_relations_features]
 	# Acronyms
 	acronyms: [find_acronyms]
 	# Genes
@@ -415,36 +506,106 @@ deepdive {
 		weight: "?(feature)"
 	}
 
+  gp_joint_1 {
+    input_query: """
+      SELECT
+        t0.id as "gene_hpoterm_relations.id",
+        t0.is_correct as "gene_hpoterm_relations.is_correct",
+        t1.id as "gene_mentions.id",
+        t1.is_correct as "gene_mentions.is_correct"
+      FROM
+        gene_hpoterm_relations t0,
+        gene_mentions t1
+      WHERE
+        t0.doc_id = t1.doc_id AND
+        t0.mention_id_1 = t1.mention_id
+    """
+    function: "Imply(gene_hpoterm_relations.is_correct, gene_mentions.is_correct)"
+    weight: "?"
+  }
+
+  gp_joint_2 {
+    input_query: """
+      SELECT
+        t0.id as "gene_hpoterm_relations.id",
+        t0.is_correct as "gene_hpoterm_relations.is_correct",
+        t1.id as "hpoterm_mentions.id",
+        t1.is_correct as "hpoterm_mentions.is_correct"
+      FROM
+        gene_hpoterm_relations t0,
+        hpoterm_mentions t1
+      WHERE
+        t0.doc_id = t1.doc_id AND
+        t0.mention_id_2 = t1.mention_id
+    """
+    function: "Imply(gene_hpoterm_relations.is_correct, hpoterm_mentions.is_correct)"
+    weight: "?"
+  }
+
+  abbre_gene_1 {
+    input_query: """
+    	select array_accum(id) as "gene_mentions.id", doc_id, entity from gene_mentions group by doc_id, entity
+    """
+    function: "And(gene_mentions.is_correct)"
+    weight: "?"
+  }
+
+   abbre_gene_2 {
+    input_query: """
+    	select array_accum(id) as "gene_mentions.id", doc_id, entity from gene_mentions group by doc_id, entity
+    """
+    function: "And(!gene_mentions.is_correct)"
+    weight: "?"
+  }
+
+  abbre_hpoterm_1 {
+    input_query: """
+    	select array_accum(id) as "hpoterm_mentions.id", doc_id, entity from hpoterm_mentions group by doc_id, entity
+    """
+    function: "And(hpoterm_mentions.is_correct)"
+    weight: "?"
+  }
+
+  abbre_hpoterm_2 {
+    input_query: """
+    	select array_accum(id) as "hpoterm_mentions.id", doc_id, entity from hpoterm_mentions group by doc_id, entity
+    """
+    function: "And(!hpoterm_mentions.is_correct)"
+    weight: "?"
+  }
+
 	# Joint factor with conjunction of the mentions implying the correctness of
 	# the mention
-	gp_joint_factor {
-		input_query: """
-					SELECT
-						t0.id as "gene_hpoterm_relations.id",
-						t0.is_correct as "gene_hpoterm_relations.is_correct",
-						t1.id as "gene_mentions.id",
-						t1.is_correct as "gene_mentions.is_correct",
-						t2.id as "hpoterm_mentions.id",
-						t2.is_correct as "hpoterm_mentions.is_correct",
-						t3.id as "gene_hpoterm_relations_copies.id",
-						t3.is_correct as "gene_hpoterm_relations_copies.is_correct"
-					FROM
-						gene_hpoterm_relations t0,
-						gene_mentions t1,
-						hpoterm_mentions t2,
-						gene_hpoterm_relations_copies t3
-					WHERE
-						t0.doc_id = t1.doc_id AND
-						t0.doc_id = t2.doc_id AND
-						t0.doc_id = t3.doc_id AND
-						t0.mention_id_1 = t1.mention_id AND
-						t0.mention_id_2 = t2.mention_id AND
-						t3.relation_id = t0.relation_id || '_COPY'
-					 """
-		function: "Imply(gene_mentions.is_correct,hpoterm_mentions.is_correct,gene_hpoterm_relations.is_correct,gene_hpoterm_relations_copies.is_correct)"
-		#function: "And(gene_mentions.is_correct,hpoterm_mentions.is_correct,gene_hpoterm_relations.is_correct,gene_hpoterm_relations_copies.is_correct)"
-		weight: "?"
-	}
+	#gp_joint_factor {
+	#	input_query: """
+	#				SELECT
+	#					t0.id as "gene_hpoterm_relations.id",
+	#					t0.is_correct as "gene_hpoterm_relations.is_correct",
+	#					t1.id as "gene_mentions.id",
+	#					t1.is_correct as "gene_mentions.is_correct",
+	#					t2.id as "hpoterm_mentions.id",
+	#					t2.is_correct as "hpoterm_mentions.is_correct",
+	#					t3.id as "gene_hpoterm_relations_copies.id",
+	#					t3.is_correct as "gene_hpoterm_relations_copies.is_correct"
+	#				FROM
+	#					gene_hpoterm_relations t0,
+	#					gene_mentions t1,
+	#					hpoterm_mentions t2,
+	#					gene_hpoterm_relations_copies t3
+	#				WHERE
+	#					t0.doc_id = t1.doc_id AND
+	#					t0.doc_id = t2.doc_id AND
+	#					t0.doc_id = t3.doc_id AND
+	#					t0.mention_id_1 = t1.mention_id AND
+	#					t0.mention_id_2 = t2.mention_id AND
+	#					t3.relation_id = t0.relation_id || '_COPY'
+	#				 """
+	#	function: "Imply(gene_mentions.is_correct,hpoterm_mentions.is_correct,gene_hpoterm_relations.is_correct,gene_hpoterm_relations_copies.is_correct)"
+	#	#function: "And(gene_mentions.is_correct,hpoterm_mentions.is_correct,gene_hpoterm_relations.is_correct,gene_hpoterm_relations_copies.is_correct)"
+	#	weight: "?"
+	#}
   }
+
+ sampler.sampler_args: "-l 300 -s 1 -i 500 --alpha 0.1 --diminish 0.99"
 }
 
